--- a/restaurant.html
+++ b/restaurant.html
@@ -29,12 +29,14 @@
   <!-- Beginning main -->
   <main id="maincontent">
     <!-- Beginning map -->
+    <!-- https://codepen.io/anon/pen/RXNwYY -->
     <section id="map-container">
       <div id="map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
+    <div id="restaurant-and-reviews">
+      <section id="restaurant-container">
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
@@ -46,6 +48,8 @@
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
     </section>
+   </div>
+
     <!-- End reviews -->
   </main>
   <!-- End main -->
