Correção na sessão de reviews

--- a/restaurant.html
+++ b/restaurant.html
@@ -32,8 +32,8 @@
    
     <!-- Beginning restaurant -->
     <div id="restaurant-and-reviews">
-      <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <section id="restaurant-container" >
+      <h1 id="restaurant-name" tabindex="1"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
