Updates service worker

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title tabindex="0">Restaurant Reviews</title>
 </head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 <body>
   <header>
     <nav>
