--- a/restaurant.html
+++ b/restaurant.html
@@ -10,6 +10,8 @@
   <title>Restaurant Info</title>
 </head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 <body class="inside">
   <!-- Beginning header -->
   <header>
