--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+ 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   <title>Restaurant Reviews</title>
 </head>
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <body>
   <header>
@@ -19,9 +21,10 @@
 
   <main id="maincontent">
   
-    <section id="map-container" aria-hidden="true" aria-labelledby="aria-map-desc">
-      <div aria-hidden="true" tabindex ="-1" id="map"></div>
-	  <label id="aria-map-desc" class="hide-aria-label">Restaurant Map</label>
+    <section id="map-container" aria-hidden="true" aria-labelledby="aria-map-container-desc">
+      <div aria-hidden="true" tabindex ="-1" id="map" aria-labelledby="aria-map-desc" role="application"></div>
+	    <label id="aria-map-desc" class="hide-aria-label">Map</label>
+	    <label id="aria-map-container-desc" class="hide-aria-label">Restaurant Map</label>
     </section>
 	
     <section>
